<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.xliu.cs</groupId>
    <artifactId>algs_ds</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <jdk.version>8</jdk.version>
        <xliu.annotation.version>1.0.5</xliu.annotation.version>
    </properties>

    <repositories>
        <repository>
            <id>xliuqq-gitee</id>
            <url>https://gitee.com/luckyQQQ/maven-repository/raw/main</url>
        </repository>
    </repositories>
    <pluginRepositories>
        <pluginRepository>
            <id>xliuqq-gitee</id>
            <url>https://gitee.com/luckyQQQ/maven-repository/raw/main</url>
        </pluginRepository>
    </pluginRepositories>

    <dependencies>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.9.2</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.28</version>
        </dependency>

        <dependency>
            <groupId>org.xliu.cs.projects</groupId>
            <artifactId>annotations-for-doc-core</artifactId>
            <version>${xliu.annotation.version}</version>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>${jdk.version}</source>
                    <target>${jdk.version}</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.xliu.cs.projects</groupId>
                <artifactId>annotations-for-doc-maven-plugin</artifactId>
                <version>${xliu.annotation.version}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>generate-doc</goal>
                        </goals>
                        <configuration>
                            <scanPkgPrefix>org.xliu.cs.algs_ds</scanPkgPrefix>
                            <outputFilePath>${project.basedir}/README.md</outputFilePath>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>
